// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> should render error 1`] = `
<div>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Settings /> should render generating component 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Generating Certificate Authority
    </h2>
    <p>
      Your certificate authority is now being generated. It usually takes a few minutes. Settings will appear here automatically once the authority is ready.
    </p>
    <div
      class="spinner-wrapper my-3 text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> should render missing component 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      No Certificate Authority
    </h2>
    <p>
      Currently there is no certificate authority (CA) dedicated to remote access. A CA is required to generate access tokens to authenticate. To proceed you need to generate it first.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Generate Certificate Authority
      </button>
    </div>
  </div>
</div>
`;

exports[`<Settings /> should render settings component 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Remote Access
    </h2>
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable Remote Access
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Accessible via WAN
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Devices in the WAN network will be able to connect to the configuration interface. Otherwise only devices on LAN will be able to access it.
          </small>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            type="number"
            value="1234"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          A port which will be opened for the remote configuration of this device.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      You can't delete certificate authority while remote access is enabled. In order to delete it you need to disable the access first.
    </p>
  </div>
</div>
`;

exports[`<Settings /> should render spinner 1`] = `
<div>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;
